--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,8 @@
 [build]
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = ".output/public"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "20"
-  NPM_FLAGS = "--version"
